--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@angular/router": "~19.0.0",
     "@nativescript/angular": "^19.0.0",
     "@nativescript/core": "~8.9.0",
+    "@triniwiz/nativescript-masonkit": "^1.0.0-alpha.12",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.0.0",
     "@angular/compiler-cli": "~19.0.0",
+    "@nativescript/android": "8.8.6",
     "@nativescript/tailwind": "^2.1.0",
     "@nativescript/types": "~8.9.0",
     "@nativescript/webpack": "~5.0.0",
